<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.alejandrobarrero.practica4.Bars">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFCC80"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#000000"
            android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/CT"
                    android:textStyle="bold"
                    android:textColor="#BF360C"
                    android:textSize="25sp"/>

                <ImageView
                    android:contentDescription="@string/CT"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:scaleType="centerCrop"
                    android:src="@drawable/casatarzanbar"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/CTD"
                    android:textStyle="bold"
                    android:textColor="#FF3D00"
                    android:paddingTop="6dp"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/CTDir"
                    android:textColor="#D84315"
                    android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#000000"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Amb"
                android:textStyle="bold"
                android:textColor="#BF360C"
                android:textSize="25sp"/>

            <ImageView
                android:contentDescription="@string/Amb"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:scaleType="centerCrop"
                android:src="@drawable/ambrosiabar"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/AmbD"
                android:textStyle="bold"
                android:textColor="#FF3D00"
                android:paddingTop="6dp"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/AmbDir"
                android:textColor="#D84315"
                android:textSize="12sp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#000000"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/RK"
                android:textStyle="bold"
                android:textColor="#BF360C"
                android:textSize="25sp"/>

            <ImageView
                android:contentDescription="@string/RK"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:scaleType="centerCrop"
                android:src="@drawable/rustikbar"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/RKD"
                android:textStyle="bold"
                android:textColor="#FF3D00"
                android:paddingTop="6dp"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/RKDir"
                android:textColor="#D84315"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#000000"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/LS"
                android:textStyle="bold"
                android:textColor="#BF360C"
                android:textSize="25sp"/>

            <ImageView
                android:contentDescription="@string/LS"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:scaleType="centerCrop"
                android:src="@drawable/lovesoundbar"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/LSD"
                android:textStyle="bold"
                android:textColor="#FF3D00"
                android:paddingTop="6dp"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/LSDir"
                android:textColor="#D84315"
                android:textSize="12sp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>