<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alejandrobarrero.practica4.Hotels">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/TSA"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/terrazasa"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TSA"
                    android:textStyle="bold"
                    android:textColor="#BF360C"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TSADir"
                    android:textColor="#D84315"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TSAT"
                    android:textStyle="bold"
                    android:id="@+id/linkterrazas"
                    android:textColor="#FF3D00"
                    android:paddingTop="6dp"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/PA"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/paloalto"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PA"
                    android:textStyle="bold"
                    android:textColor="#BF360C"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PADir"
                    android:textColor="#D84315"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PAT"
                    android:textStyle="bold"
                    android:textColor="#FF3D00"
                    android:paddingTop="6dp"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/CP"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/casapens"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CP"
                    android:textStyle="bold"
                    android:textColor="#BF360C"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CPDir"
                    android:textColor="#D84315"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CPT"
                    android:textStyle="bold"
                    android:textColor="#FF3D00"
                    android:paddingTop="6dp"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/HCP"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/casapam"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/HCP"
                    android:textStyle="bold"
                    android:textColor="#BF360C"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/HCPDir"
                    android:textColor="#D84315"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/HCPT"
                    android:textStyle="bold"
                    android:textColor="#FF3D00"
                    android:paddingTop="6dp"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/FLE"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/fincaestampilla"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FLE"
                    android:textStyle="bold"
                    android:textColor="#BF360C"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FLEDir"
                    android:textColor="#D84315"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FLET"
                    android:textStyle="bold"
                    android:textColor="#FF3D00"
                    android:paddingTop="6dp"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>