<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alejandrobarrero.practica4.AboutSA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/SA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/municipiosa"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SA"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/Desc"/>
                <ImageView
                    android:contentDescription="@string/SA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/patrimonio"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Hist"
                    android:textSize="12.5sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/SA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bandera"
                    android:layout_marginBottom="10dp"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Datos"
                    android:textSize="12sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
